Fix visibility not firing as intended

--- a/src/pages/annotations/Annotation.module.scss
+++ b/src/pages/annotations/Annotation.module.scss
@@ -15,10 +15,12 @@
 
 .fadeIn {
   opacity: 1;
-  transition: width 0.5s 0.5s, height 0.5s 0.5s, opacity 0.5s;
+  visibility: visible;
+  transition: opacity 250ms, visibility 251ms;
 }
 
 .fadeOut {
   opacity: 0;
-  transition: width 0.5s 0.5s, height 0.5s 0.5s, opacity 0.5s;
+  visibility: hidden;
+  transition: opacity 250ms, visibility 251ms;
 }
